fix: admin button text colour
Default button class set text colour to "white!important", making the admin button unreadable when hovered.

--- a/app/styles/components/_buttons.scss
+++ b/app/styles/components/_buttons.scss
@@ -18,14 +18,14 @@
   box-shadow: 0 0 0px rgba(0, 0, 0, 0.0);
   &:hover {
     background: lighten($primary-cta-color, 5);
-    color: $white!important;
+    color: $white;
   }
   &:disabled {
     background: $secondary-cta-color;
     opacity: 1;
   }
   &.inactive {
-    background: $secondary-cta-color!important;
+    background: $secondary-cta-color;
     color: $body-tertiary-text-color;
     &:hover {
       background: lighten($secondary-cta-color, 5);
